--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.6.5
   font_awesome_flutter: ^10.2.1
   flutter_rating_bar: ^4.0.1
+  flutter_spinkit: ^5.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
