--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   font_awesome_flutter: ^10.2.1
   flutter_rating_bar: ^4.0.1
   flutter_spinkit: ^5.1.0
+
+  # Firebase database
+  cloud_firestore: ^4.3.1
+  firebase_auth: ^4.2.5
+  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
