--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   cloud_firestore: ^4.3.1
   firebase_auth: ^4.2.5
   connectivity_plus: ^3.0.2
+  image_picker: ^0.8.6
+  firebase_storage: ^11.0.10
+  path: ^1.8.2
   
   
 
