--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  intl_phone_number_input: ^0.7.0+2
+  intl_phone_number_input: ^0.7.2
   get: ^4.6.5
   font_awesome_flutter: ^10.2.1
   flutter_rating_bar: ^4.0.1
@@ -48,8 +48,6 @@ dependencies:
   image_picker: ^0.8.6
   firebase_storage: ^11.0.10
   path: ^1.8.2
-  
-  
 
 dev_dependencies:
   flutter_test:
