--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image_picker: ^0.8.6
   firebase_storage: ^11.0.10
   path: ^1.8.2
+  #flutter_swiper: ^1.1.6
 
 dev_dependencies:
   flutter_test:
