--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_storage: ^11.0.10
   path: ^1.8.2
   flutter_swiper: ^1.1.6
+  video_player: ^2.5.2
 
 dev_dependencies:
   flutter_test:
