--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   path: ^1.8.2
   flutter_swiper: ^1.1.6
   video_player: ^2.5.2
+  file_picker: ^5.2.5
 
 dev_dependencies:
   flutter_test:
