--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   video_player: ^2.5.2
   file_picker: ^5.2.5
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
