--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,11 +49,11 @@ dependencies:
   path: ^1.8.2
   flutter_swiper: ^1.1.6
   video_player: ^2.1.12
+  chewie: ^1.4.0
   file_picker: ^5.2.5
   http: ^0.13.5
   url_launcher: ^6.0.0
   get_time_ago: ^1.1.8
-  
 
 dev_dependencies:
   flutter_test:
