--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,8 +54,7 @@ dependencies:
   http: ^0.13.0
   url_launcher: ^6.0.0
   get_time_ago: ^1.1.8
-  flutter_badged: ^2.0.3
-  
+  flutter_slidable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
