--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   get_time_ago: ^1.1.8
   flutter_slidable: ^2.0.0
   flutter_stripe: ^9.3.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
