--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,19 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get: ^4.6.5
+  get: ^4.6.6
   font_awesome_flutter: ^10.2.1
   flutter_rating_bar: ^4.0.1
   flutter_spinkit: ^5.1.0
 
   # Firebase database
-  cloud_firestore: ^4.0.1
-  firebase_auth: ^4.2.1
+  cloud_firestore: ^4.9.1
+  firebase_auth: ^4.9.0
   connectivity_plus: ^3.0.2
   image_picker: ^0.8.6
-  firebase_storage: ^11.0.10
+  firebase_storage: ^11.2.6
   path: ^1.8.2
-  flutter_swiper: ^1.1.6
   video_player: ^2.1.12
   chewie: ^1.4.0
   file_picker: ^5.2.5
@@ -58,6 +57,7 @@ dependencies:
   flutter_stripe: ^9.3.0
   shimmer: ^3.0.0
   ionicons: ^0.2.2
+  card_swiper: ^3.0.1
 
 dev_dependencies:
   flutter_test:
