--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   ionicons: ^0.2.2
   card_swiper: ^3.0.1
   intl: ^0.18.1
+  flutter_typeahead: ^4.8.0
 
 dev_dependencies:
   flutter_test:
