--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   card_swiper: ^3.0.1
   intl: ^0.18.1
   flutter_typeahead: ^4.8.0
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
