--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   intl: ^0.18.1
   flutter_typeahead: ^4.8.0
   fluttertoast: ^8.2.2
+  redacted: ^1.0.11
 
 dev_dependencies:
   flutter_test:
